yaml-k8s/nginx/ingress-nginx-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-pod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - kong-demo.mb-innovationlab.com
    secretName: tls-certificate-certs
  rules:
  - host: kong-demo.mb-innovationlab.com
    http:
      paths:
      # - path: /db(.*)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-services
            port:
              number: 80
